# claude-cognitive-surrender

./: README.md  package-lock.json  package.json  tsup.config.ts
hook/: Cargo.toml
hook/src/: main.rs
src/: cli.ts  db.ts  hook.ts  provocations.ts  render.ts  scoring.ts  statusline.ts  storage.ts
src/commands/: challenge.ts  export.ts  install.ts  stats.ts  streak.ts
tests/: hook.test.ts  scoring.test.ts
