[package]
name = "cs-hook"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cs-hook"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
